@@ -104,6 +104,7 @@
  * #1651 (Cobyla freezes in 0T1.16rc1)
  * #1654 (StationaryFunctionalCovarianceModel::discretize segfaults)
  * #1660 (Cannot extract continuous modes from KLResult when dimension>1)
+ * #1668 (LevelSetMesher does not take into account the comparison operator)
 
 
 == 1.15 release (2020-05-25) == #release-1.15
